--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,8 +1,15 @@
 
+.home-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
 .slider-box {
   width: 100%;
   max-width: 1000px;
-  background:lightblue;
+  background: #f9f9f9;
   border-radius: 12px;
   padding: 20px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
@@ -10,12 +17,13 @@
 }
 
 .slide img {
-  width: 100%;
-  height: 300px;
-  object-fit: cover;
-  border-radius: 8px;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  width: 100%;             
+  height: 100%;            
+  object-fit: cover;     
+  border-radius: 8px;      
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); 
 }
+
 .slide p {
   margin-top: 10px;
   color: #333;
@@ -23,5 +31,60 @@
   font-weight: 600;
 }
 
+.text-image-section {
+  width: 90%;
+  height:100%;
+  max-width: 1000px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  margin-top: 40px;
+}
 
-  
+.content-box {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 20px;
+  background: #f9f9f9;
+  padding: 20px;
+  border-radius: 12px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.content-box img {
+  width: 100%;
+  max-width: 400px;
+  height: 250px;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
+.content-box p {
+  width: 50%;
+  font-size: 18px;
+  line-height: 1.5;
+  color: #333;
+  font-weight: 500;
+}
+
+.donate-link p {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #4CAF50;
+  color: white;
+  font-size: 16px;
+  text-align: center;
+  text-decoration: none; 
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+
+.donate-link p:hover {
+  background-color: #45a049; 
+}
+
+
+
