--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,22 +1,22 @@
 
-.home-container {
+.home-page .home-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
 }
 
-.slider-box {
+.home-page .slider-box {
   width: 100%;
   max-width: 1000px;
-  background: #f9f9f9;
+  background:grey;
   border-radius: 12px;
   padding: 20px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   text-align: center;
 }
 
-.slide img {
+.home-page .slide img {
   width: 100%;             
   height: 100%;            
   object-fit: cover;     
@@ -24,14 +24,14 @@
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); 
 }
 
-.slide p {
+.home-page .slide p {
   margin-top: 10px;
   color: #333;
   font-size: 18px;
   font-weight: 600;
 }
 
-.text-image-section {
+.home-page .text-image-section {
   width: 90%;
   height:100%;
   max-width: 1000px;
@@ -41,18 +41,18 @@
   margin-top: 40px;
 }
 
-.content-box {
+.home-page .content-box {
   display: flex;
   align-items: center;
   justify-content: space-between;
   gap: 20px;
-  background: #f9f9f9;
+  background:grey;
   padding: 20px;
   border-radius: 12px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.content-box img {
+.home-page .content-box img {
   width: 100%;
   max-width: 400px;
   height: 250px;
@@ -60,7 +60,7 @@
   border-radius: 10px;
 }
 
-.content-box p {
+.home-page .content-box p {
   width: 50%;
   font-size: 18px;
   line-height: 1.5;
@@ -68,7 +68,7 @@
   font-weight: 500;
 }
 
-.donate-link p {
+.home-page .donate-link p {
   display: inline-block;
   padding: 10px 20px;
   background-color: #4CAF50;
@@ -82,7 +82,7 @@
 }
 
 
-.donate-link p:hover {
+.home-page .donate-link p:hover {
   background-color: #45a049; 
 }
 
