--- a/src/pages/Donate.css
+++ b/src/pages/Donate.css
@@ -101,18 +101,21 @@
 
 .donate-page .modal-buttons button:first-child {
   background: #49E761;
-  color: white;
+  color: black;
+  font-weight: bold;
 }
 
 .donate-page .modal-buttons button:last-child {
   background: red;
-  color: white;
+  color: black;
+  font-weight: bold;
 }
 
 .donate-page .donate-button {
   background-color: #49E761;
-  color: white;
+  color: black;
   font-size: 16px;
+  font-weight: bold;
   padding: 10px 20px;
   border: none;
   border-radius: 5px;
