--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -8,7 +8,7 @@
 
 .home-page .slider-box {
   width: 100%;
-  max-width: 1000px;
+  max-width: 65vw;
   background: none;
   border-radius: 12px;
   padding: 20px;
@@ -18,7 +18,7 @@
 
 .home-page .slide img {
   width: 100%;             
-  height: 100%;            
+  height: auto;  
   object-fit: cover;     
   border-radius: 8px;      
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); 
@@ -68,7 +68,6 @@
   transition: background-color 0.3s ease;
 }
 
-
 .home-page .receive-link h2:hover {
   background-color: #45a049; 
 }
@@ -80,12 +79,13 @@
 
 .info-box{
   display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .info-box img{
   width: 100%;
-  max-width: 400px;
-  height: 250px;
+  max-width: 25vw;
   border-radius: 10px;
   object-fit: cover;
 }
@@ -112,7 +112,8 @@
 /* dots will appear within image box */
 .green-slider-dots{
   position: absolute;
-  left: 47%;
+  left: 50%;
+  transform: translateX(-50%);
   bottom: 20px;
 }
 
@@ -146,5 +147,61 @@
 }
 
 .slick-prev:before, .slick-next:before{
-  font-size: 50px;
+  font-size: 40px;
+}
+
+@media (max-width: 1125px){
+  .home-page .receive-link h2{
+    font-size: 1.5em;
+  }
+}
+
+@media (max-width: 875px){
+  .home-page .slider-box{
+    max-width: 80vw;
+  }
+
+  .home-page .receive-link h2{
+    padding: 10px 20px 10px 20px;
+  }
+
+  .slick-prev:before, .slick-next:before{
+    font-size: 30px;
+  }
+
+  .info-box{
+    font-size: 0.75em;
+  }
+}
+
+@media(max-width: 595px){
+  .home-page .receive-link h2{
+    font-size: 1em;
+    padding: 5px 10px 5px 10px;
+  }
+
+  .slick-prev:before, .slick-next:before{
+    font-size: 20px;
+  }
+
+  .section-two .section-text{
+    text-align: left;
+  }
+
+  .info-box{
+    flex-direction: column;
+    font-size: 0.6em;
+  }
+
+  .info-box img{
+    max-width: 100%;
+    height: 30vh;
+  }
+}
+
+@media (max-width: 385px){
+  .home-page .receive-link h2{
+    font-size: 1em;
+    padding: 3px 7px 3px 7px;
+  }
 }
