--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -6,7 +6,6 @@
   align-items: center;
   justify-content: flex-start; /* Start at the top */
   height: 100vh; /* Full height */
-  padding-top: 20px; /* Adjust top padding if needed */
 }
 
 /* Center content on each page */
@@ -53,34 +52,45 @@ nav{
   border: 2em;
   border-radius: 10%;
   padding: 5px 10px 5px 10px;
-  background-color: #49E761;
+  background-color: #6EBE59;
 }
 
-.styled-nav-link{
+.nav-links-center .styled-nav-link{
   text-decoration: none;
   font-weight: bold;
-  color: inherit;
+  color: white;
+  font-size: 1.5em;
+}
+
+.nav-links-right .styled-nav-link{
+  text-decoration: none;
+  font-weight: bold;
+  color: black;
   font-size: 1.5em;
 }
 
 .nav-links .brand:hover, .nav-links-right li:hover{
-  color: #49E761;
+  color: #0A931F;
 }
 
 .nav-links .brand:active, .nav-links-right li:active{
-  color: #45a049;
+  color: #6EBE59;
 }
 
 .nav-links-center li:hover{
-  color: #49E761;
-  background-color: black;
-  border-color: black;
+  background-color: #0A931F;
 }
 
 .nav-links-center li:active{
-  color: #45a049;
-  background-color: black;
-  border-color: black;
+  background-color: #6EBE59;
+}
+
+.nav-links-right .styled-nav-link:hover{
+  color: #0A931F;
+}
+
+.nav-links-right .styled-nav-link:active{
+  color: #6EBE59;
 }
 
 .brand-logo{
@@ -123,6 +133,10 @@ form button:hover {
 }
 
 @media (max-width: 1125px){
+  nav{
+    width: 90%;
+  }
+
   .nav-links-center{
     position: static;
     transform: none;
