--- a/frontend/src/pages-styles/Donate.css
+++ b/frontend/src/pages-styles/Donate.css
@@ -211,3 +211,16 @@ form button:hover {
   background-color: #2563eb;
 }
 
+.donor-type-options {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 10px;
+}
+
+.donor-label {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-weight: bold;
+}
+
